--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -18,7 +18,12 @@
     <p>Já me livrei da maldição!!</p>
 
     <script>
+        //Utilize sempre comentários!
+        
+        /* E não esqueça de utilizar /* para comentários de mais de 01 linha */
         window.alert('Meu primeiro script')
+        window.confirm('Este alerta está funcionando?')
+        window.prompt('Qual seu nome?')
     </script>
 </body>
 </html>
