--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -18,12 +18,10 @@
     <p>Já me livrei da maldição!!</p>
 
     <script>
-        //Utilize sempre comentários!
-        
-        /* E não esqueça de utilizar /* para comentários de mais de 01 linha */
-        window.alert('Meu primeiro script')
-        window.confirm('Este alerta está funcionando?')
-        window.prompt('Qual seu nome?')
+       var n1 = Number.parseInt(window.prompt('Digite o primeiro número: '))
+       var n2 = Number.parseInt(window.prompt('Digite o segundo número: '))
+       var res = n1 + n2
+       window.alert (`A soma dos números ${n1} e ${n2} é igual a ${res}`)
     </script>
 </body>
 </html>
