--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -7,9 +7,13 @@
     <style>
         body {
             background-color: rgb(123, 104, 209);
-            color: white;
+            color: rgb(255, 255, 255);
             font-family: Arial, Helvetica, sans-serif;
             font-size: 2em;
+        }
+
+        h1 {
+            color: goldenrod;
         }
     </style>
 </head>
@@ -17,11 +21,14 @@
     <h1>Olá, Mundo!</h1>
     <p>Já me livrei da maldição!!</p>
 
-    <script>
+    <script> /*
        var n1 = Number.parseInt(window.prompt('Digite o primeiro número: '))
-       var n2 = Number.parseInt(window.prompt('Digite o segundo número: '))
+
+       var n2 = Number(window.prompt('Digite o segundo número: '))
+
        var res = n1 + n2
-       window.alert (`A soma dos números ${n1} e ${n2} é igual a ${res}`)
+
+       window.alert (`A soma dos números ${n1} e ${n2} é igual a ${res}`) */
     </script>
 </body>
 </html>
