--- a/exercicios/ex006.html
+++ b/exercicios/ex006.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eventos DOM</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        div#area {
+            font: normal 2em Arial;
+            background-color: green;
+            color: white;
+            width: 200px;
+            height: 200px;
+            text-align: center;
+            line-height: 200px;
+            margin: 20px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="area" >
+        <p>Interaja</p>
+    </div>
+
+    <script>
+        var a = window.document.getElementById("area");
+
+        a.addEventListener('click', clicar)
+        a.addEventListener('mouseenter', entrou)
+        a.addEventListener('mouseout', idle)
+
+        function idle() {
+            a.innerText = 'Interaja'
+            a.style.backgroundColor = 'green'
+        }
+        function clicar() {
+            a.innerHTML = 'Clicou'
+            a.style.backgroundColor = 'red'
+        }
+        function entrou () {
+            a.innerHTML = 'Entrou'
+            a.style.backgroundColor = 'blue'
+        }
+    </script>
 </body>
 </html>
