--- a/exercicios/aula10/ex007.html
+++ b/exercicios/aula10/ex007.html
@@ -5,37 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body {
-            font: normal 1.5em Arial;
+        body{
+            font: normal 20px Arial;
         }
 
         input {
-            font: normal 0.80em Arial;
+            font: normal 18px Arial;
+            width: 100px;
+            margin-bottom: 20px;
+        }
+
+        input#somar {
+            width: 80px;
         }
     </style>
 </head>
 <body>
-    <h1>Somando Valores</h1>
+    <h1>Somando Valores </h1>
     <input type="number" name="txtn1" id="txtn1">
     +
     <input type="number" name="txtn2" id="txtn2">
-    <input type="button" value="Somar" id="button">
-    <div id="res">Resultado:</div>
+    <input type="button" value="Somar" name="somar" id="somar" onclick="somar()">
+    <div id="res">Resultado</div>
 
     <script>
-
-        var button = document.querySelector('input#button')
-
-        button.addEventListener('click', somar);
-
         function somar() {
-            var tn1 = document.getElementById('txtn1');
+            var tn1 = window.document.getElementById('txtn1')
             var tn2 = document.querySelector('input#txtn2')
             var n1 = Number(tn1.value)
             var n2 = Number(tn2.value)
-            var res = document.getElementById('res')
-            var soma = n1 + n2;
-            res.innerHTML = `A soma entre os números ${n1} e ${n2} é igual a: ${soma}`
+            var s = n1 + n2
+            res.innerHTML = `A soma dos números ${n1} e ${n2} é igual a <strong>${s}</strong>`;
+            
         }
     </script>
 </body>
