--- a/exercicios/aula14/index.html
+++ b/exercicios/aula14/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Relogio</title>
+    <title>Desafio Hora do Dia</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body onload="load()">
     <header>
-        <h1>Título</h1>
+        <h1>Hora do Dia</h1>
     </header>
     <main>
         <section>
-            <div></div>
-            <div></div>
+            <div id="msg">
+                <p>Aqui vai aparecer a msg</p>
+            </div>
+
+            <div >
+                <img id="img" src="imagens/noite.png" alt="Foto do Dia">
+            </div>
+
         </section>
     </main>
     <footer>
