--- a/exercicios/aula15/index.html
+++ b/exercicios/aula15/index.html
@@ -3,17 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Relogio</title>
+    <title>Desafio Verificador de idade</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Verificador de Idade</h1>
     </header>
     <main>
         <section>
-            <div>Teste</div>
-            <div></div>
+            <div>
+                <p><label for="txtano">Ano de nascimento:</label>
+                    <input type="number" name="txtano" id="txtano" min="0" value="2000" required>
+                    
+                </p>
+
+                <p>Sexo: 
+                    <input type="radio" name="radsex" id="masc" checked>
+                    <label for="masc">Masculino</label>
+
+                    <input type="radio" name="radsex" id="fem">
+                    <label for="fem">Feminino</label>
+                </p>
+                <p>
+                    <input type="button" value="Verificar" onclick="verificar()">
+                </p>
+            </div>
+            <div id="res">
+                Preencha os campos acima!
+            </div>
         </section>
     </main>
     <footer>
