--- a/desafios/desafio03/index.html
+++ b/desafios/desafio03/index.html
@@ -1,24 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Desafio Identificador de idade</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
     <header>
-        <h1>Título</h1>
+      <h1>Vamos Contar</h1>
     </header>
     <main>
-        <section>
-            <div></div>
-            <div></div>
-        </section>
+      <section>
+        <div>
+          <p>
+            <label for="start">Inicio: </label>
+            <input type="number" name="start" id="start" min="0"/>
+          </p>
+          <br />
+          <p>
+            <label for="end">Fim: </label>
+            <input type="number" name="end" id="end" min="0"/>
+          </p>
+          <br />
+          <p>
+            <label for="step">Passo: </label>
+            <input type="number" name="step" id="step" min="1" />
+          </p>
+          <br />
+          <p>
+            <input type="button" value="Contar" onclick="contar()"/>
+          </p>
+        </div>
+        <div id="res">
+          Preparando contagem...
+        </div>
+      </section>
     </main>
     <footer>
-        <p>© Saesminerais</p>
+      <p>© Saesminerais</p>
     </footer>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
