--- a/desafios/desafio03/index.html
+++ b/desafios/desafio03/index.html
@@ -15,17 +15,17 @@
         <div>
           <p>
             <label for="start">Inicio: </label>
-            <input type="number" name="start" id="start" min="0"/>
+            <input type="number" name="start" id="start" min="0"value="10"/>
           </p>
           <br />
           <p>
             <label for="end">Fim: </label>
-            <input type="number" name="end" id="end" min="0"/>
+            <input type="number" name="end" id="end" min="0"value="1"/>
           </p>
           <br />
           <p>
             <label for="step">Passo: </label>
-            <input type="number" name="step" id="step" min="1" />
+            <input type="number" name="step" id="step" min="1" value="1"/>
           </p>
           <br />
           <p>
