--- a/desafios/desafio04/index.html
+++ b/desafios/desafio04/index.html
@@ -19,8 +19,8 @@
             <input type="button" value="Gerar Tabuada" onclick="calc()" class="btn"/>
           </p>
         </div>
-        <div id="disp">
-            Resultado:
+        <div>
+            <select name="selTab" id="selTab" size="10"></select>
         </div>
       </section>
     </main>
