--- a/desafios/desafio04/index.html
+++ b/desafios/desafio04/index.html
@@ -19,8 +19,10 @@
             <input type="button" value="Gerar Tabuada" onclick="calc()" class="btn"/>
           </p>
         </div>
-        <div>
-            <select name="selTab" id="selTab" size="10"></select>
+        <div id="tabuada">
+            <select name="selTab" id="selTab" size="10">
+                <option value="">Digite um número acima</option>
+            </select>
         </div>
       </section>
     </main>
