--- a/desafios/desafio05/index.html
+++ b/desafios/desafio05/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Identificador de idade</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Analisador de números</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
     <header>
-        <h1>Título</h1>
+      <h1>Analisador de números</h1>
     </header>
     <main>
-        <section>
-            <div></div>
-            <div></div>
-        </section>
+      <section>
+        <div>
+          <p>
+            <label for="inputNum">Número (entre 1 e 100): </label>
+            <input type="number" name="inputNum" id="inputNum" required />
+            <input type="button" value="Adicionar" />
+          </p>
+          <p>
+            <select name="board" id="board" size="8">
+              <option>Números Adicionados:</option>
+            </select>
+            <br />
+            <input type="button" value="Finalizar" />
+          </p>
+        </div>
+        <div></div>
+      </section>
     </main>
     <footer>
-        <p>© Saesminerais</p>
+      <p>© Saesminerais</p>
     </footer>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
