--- a/desafios/desafio05/index.html
+++ b/desafios/desafio05/index.html
@@ -16,17 +16,17 @@
           <p>
             <label for="inputNum">Número (entre 1 e 100): </label>
             <input type="number" name="inputNum" id="inputNum" required />
-            <input type="button" value="Adicionar" />
+            <input type="button" value="Adicionar" onclick="addToBoard()"/>
           </p>
           <p>
             <select name="board" id="board" size="8">
               <option>Números Adicionados:</option>
             </select>
             <br />
-            <input type="button" value="Finalizar" />
+            <input type="button" value="Finalizar" onclick="calcInfo()"/>
           </p>
         </div>
-        <div></div>
+        <div id="info"></div>
       </section>
     </main>
     <footer>
