--- a/desafios/desafio05/index.html
+++ b/desafios/desafio05/index.html
@@ -16,7 +16,7 @@
           <p>
             <label for="inputNum">Número (entre 1 e 100): </label>
             <input type="number" name="inputNum" id="inputNum" required />
-            <input type="button" value="Adicionar" onclick="addToBoard()"/>
+            <input type="button" value="Adicionar" onclick="addToBoard()" id="addBtn"/>
           </p>
           <p>
             <select name="board" id="board" size="8">
