--- a/desafios/desafio05/index.html
+++ b/desafios/desafio05/index.html
@@ -16,14 +16,20 @@
           <p>
             <label for="inputNum">Número (entre 1 e 100): </label>
             <input type="number" name="inputNum" id="inputNum" required />
-            <input type="button" value="Adicionar" onclick="addToBoard()" id="addBtn"/>
+            <input
+              type="button"
+              value="Adicionar"
+              onclick="addToBoard()"
+              id="addBtn"
+            />
           </p>
           <p>
             <select name="board" id="board" size="8">
               <option>Números Adicionados:</option>
             </select>
             <br />
-            <input type="button" value="Finalizar" onclick="calcInfo()"/>
+            <input type="button" value="Finalizar" onclick="calcInfo()" class="button"/>
+            <input type="reset" value="Limpar valores" class="button">
           </p>
         </div>
         <div id="info"></div>
