--- a/desafios/desafio05/index.html
+++ b/desafios/desafio05/index.html
@@ -25,11 +25,11 @@
           </p>
           <p>
             <select name="board" id="board" size="8">
-              <option>Números Adicionados:</option>
+              <option>Números adicionados:</option>
             </select>
             <br />
             <input type="button" value="Finalizar" onclick="calcInfo()" class="button"/>
-            <input type="reset" value="Limpar valores" class="button">
+            <input type="button" value="Limpar" class="button" onclick="clearBoard()">
           </p>
         </div>
         <div id="info"></div>
