--- a/desafios/desafio05/index.html
+++ b/desafios/desafio05/index.html
@@ -38,6 +38,6 @@
     <footer>
       <p>© Saesminerais</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js"></script>""
   </body>
 </html>
